--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Web Client -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
